# qa-jenkins

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/flask_app/: app.py  main.py  vm_controls.py
src/flask_app/controllers/: vm_controls_controllers.py
src/flask_app/queue_broker/: AbstractMethods.py  RabbitMqConnection.py  TarantoolQueue.py
src/flask_app/static/css/: test.css
src/flask_app/static/js/: test.js
src/flask_app/templates/: index.html  test.js
src/flask_app/views/: vm_controls_views.py
src/frontend/: test.html
tests/: #conftest.py#  .test_vm_controls.py.swp  pytest.ini  test_vm_controls.py
